--- a/requirements.txt
+++ b/requirements.txt
@@ -7,7 +7,7 @@ django-cors-headers==3.4.0
 djangorestframework==3.11.2
 djangorestframework-jwt==1.11.0
 gunicorn==20.1.0
-psycopg2==2.8.5
+psycopg2-binary==*
 pycparser==2.21
 PyJWT==1.7.1
 python-decouple==3.6
